[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Sprites/UI/ProgressBar/flourish2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/UI/ProgressBar/flourish3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/UI/ProgressBar/flourish.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/UI/ResourceStatus.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/UI/ProgressBar/ring.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/UI/ProgressBar/ring_bg.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/UI/ProgressBar/ring_inner.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/icons/PNG/White/1x/massiveMultiplayer.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/defaultTheme.tres" type="Theme" id=13]
[ext_resource path="res://Assets/UI/icons/PNG/White/1x/menuGrid.png" type="Texture" id=14]

[node name="ResourceStatus" type="Node2D" groups=["GamestateObserver"]]
script = ExtResource( 4 )
supplies = 11
crew = 11

[node name="Flourish2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Flourish3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Flourish" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="CrewDisplay" type="Node2D" parent="."]
position = Vector2( -457, -29 )
scale = Vector2( 0.748, 0.748 )

[node name="RingInner" type="Sprite" parent="CrewDisplay"]
modulate = Color( 0.898039, 0.384314, 0.384314, 1 )
texture = ExtResource( 10 )

[node name="RingBg" type="Sprite" parent="CrewDisplay"]
modulate = Color( 0.211765, 0, 0.682353, 0.556863 )
texture = ExtResource( 9 )

[node name="Ring" type="Sprite" parent="CrewDisplay"]
texture = ExtResource( 8 )

[node name="CrewLabel" type="Label" parent="CrewDisplay"]
margin_left = -44.1176
margin_top = -46.7914
margin_right = 61.8824
margin_bottom = 62.2086
rect_scale = Vector2( 0.840986, 0.840986 )
theme = ExtResource( 13 )
text = "2"
align = 1

[node name="SubIcon" type="Node2D" parent="CrewDisplay"]
position = Vector2( 50.8021, 70.8556 )
scale = Vector2( 0.454144, 0.454144 )

[node name="RingInner" type="Sprite" parent="CrewDisplay/SubIcon"]
modulate = Color( 0.898039, 0.384314, 0.384314, 1 )
texture = ExtResource( 10 )

[node name="RingBg" type="Sprite" parent="CrewDisplay/SubIcon"]
modulate = Color( 0.211765, 0, 0.682353, 1 )
texture = ExtResource( 9 )

[node name="Ring" type="Sprite" parent="CrewDisplay/SubIcon"]
texture = ExtResource( 8 )

[node name="MassiveMultiplayer" type="Sprite" parent="CrewDisplay/SubIcon"]
position = Vector2( 0, 2.94378 )
scale = Vector2( 2.90368, 2.90368 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="CrewDisplay/SubIcon"]
visible = false
margin_left = -47.1004
margin_top = -88.3133
margin_right = 15.8996
margin_bottom = 20.6867
rect_scale = Vector2( 1.5583, 1.5583 )
theme = ExtResource( 13 )
text = "2"

[node name="SuppliesDisplay" type="Node2D" parent="."]
position = Vector2( 446, -28 )
scale = Vector2( 0.748, 0.748 )

[node name="RingInner" type="Sprite" parent="SuppliesDisplay"]
modulate = Color( 0, 1, 0.156863, 1 )
texture = ExtResource( 10 )

[node name="RingBg" type="Sprite" parent="SuppliesDisplay"]
modulate = Color( 0.211765, 0, 0.682353, 0.556863 )
texture = ExtResource( 9 )

[node name="Ring" type="Sprite" parent="SuppliesDisplay"]
texture = ExtResource( 8 )

[node name="SuppliesLabel" type="Label" parent="SuppliesDisplay"]
margin_left = -44.1176
margin_top = -46.7914
margin_right = 61.8824
margin_bottom = 62.2086
rect_scale = Vector2( 0.840986, 0.840986 )
theme = ExtResource( 13 )
text = "10"
align = 1

[node name="RingDisplay2" type="Node2D" parent="SuppliesDisplay"]
position = Vector2( -64.171, 81.5508 )
scale = Vector2( 0.454144, 0.454144 )

[node name="RingInner" type="Sprite" parent="SuppliesDisplay/RingDisplay2"]
modulate = Color( 0, 1, 0.156863, 1 )
texture = ExtResource( 10 )

[node name="RingBg" type="Sprite" parent="SuppliesDisplay/RingDisplay2"]
modulate = Color( 0.211765, 0, 0.682353, 1 )
texture = ExtResource( 9 )

[node name="Ring" type="Sprite" parent="SuppliesDisplay/RingDisplay2"]
texture = ExtResource( 8 )

[node name="i" type="Sprite" parent="SuppliesDisplay/RingDisplay2"]
position = Vector2( 0, 2.94378 )
scale = Vector2( 2.90368, 2.90368 )
texture = ExtResource( 14 )
